--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="intestazione">
             <div class="logo-text">
-                <img src="img/logo copia.png" alt="">
+                <img src="img/logo copia.png" alt="logo Boolean">
                 <span id="text-toboolist">Toboolist</span>
             </div>
         </div>
@@ -30,23 +30,25 @@
 
     <main>
         <div id="menu">
-            <ul class="schede">New Task
-                <li>Quarterly Newsletter</li>
-            </ul>
+            <h3>New Task</h3>
+                <ul class="schede">
+                    <li>Quarterly Newsletter</li>
+                </ul>
 
-            <ul class="schede">Today
-                <li>Recruiting blog post</li>
-                <li>Mobile app launch</li>
-                <li>Interview John H.</li>
-                <li>Summit update to mobile storefronts</li>
-            </ul>
-
-            <ul class="schede">Upcoming
-                <li>Schedule meeting with Alex</li>
-                <li>Homepage refresh</li>
-                <li>Onboard new Sales team members</li>
-                <li>Review editorial calendar</li>
-            </ul>
+            <h3>Today</h3>
+                <ul class="schede">
+                    <li>Recruiting blog post</li>
+                    <li>Mobile app launch</li>
+                    <li>Interview John H.</li>
+                    <li>Summit update to mobile storefronts</li>
+                </ul>
+            <h3>Upcoming</h3>
+                <ul class="schede">
+                    <li>Schedule meeting with Alex</li>
+                    <li>Homepage refresh</li>
+                    <li>Onboard new Sales team members</li>
+                    <li>Review editorial calendar</li>
+                 </ul>
         </div>
     </main>
     
