--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="intestazione">
             <div class="logo-text">
-                <img src="img/logo copia.png" alt="logo Boolean">
+                <img src="img/Logo.png" alt="logo Boolean">
                 <span id="text-toboolist">Toboolist</span>
             </div>
         </div>
