--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
         <div id="menu">
             <h3>New Task</h3>
                 <ul class="schede">
-                    <li>Quarterly Newsletter</li>
+                    <li>Quarterly Newsletter  <span class="editorial">Editorial</span></li>
                 </ul>
 
             <h3>Today</h3>
                 <ul class="schede">
-                    <li>Recruiting blog post</li>
-                    <li>Mobile app launch</li>
-                    <li>Interview John H.</li>
-                    <li>Summit update to mobile storefronts</li>
+                    <li>Recruiting blog post  <span class="editorial">Editorial</span></li>
+                    <li>Mobile app launch <span>QI Goals</span></li>
+                    <li>Interview John H. <span>Recruiting</span></li>
+                    <li>Summit update to mobile storefronts <span>Mobile</span></li>
                 </ul>
             <h3>Upcoming</h3>
                 <ul class="schede">
                     <li>Schedule meeting with Alex</li>
-                    <li>Homepage refresh</li>
-                    <li>Onboard new Sales team members</li>
-                    <li>Review editorial calendar</li>
+                    <li>Homepage refresh <span>Website</span></li>
+                    <li>Onboard new Sales team members <span>Sales</span></li>
+                    <li>Review editorial calendar  <span class="editorial">Editorial</span></li>
                  </ul>
         </div>
     </main>
