--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
 
     <main>
         <div id="menu">
-            <h3>New Task</h3>
+            <h3><span class="code">&#9660;</span>New Task</h3>
                 <ul class="schede">
-                    <li>Quarterly Newsletter  <span class="editorial">Editorial</span></li>
+                    <li><span class="check"> &check; </span>Quarterly Newsletter  <span class="button">Editorial</span></li>
                 </ul>
 
-            <h3>Today</h3>
+            <h3><span class="code">&#9660;</span>Today</h3>
                 <ul class="schede">
-                    <li>Recruiting blog post  <span class="editorial">Editorial</span></li>
-                    <li>Mobile app launch <span>QI Goals</span></li>
-                    <li>Interview John H. <span>Recruiting</span></li>
-                    <li>Summit update to mobile storefronts <span>Mobile</span></li>
+                    <li><span class="check"> &check; </span>Recruiting blog post  <span class="button">Editorial</span></li>
+                    <li><span class="check"> &check; </span>Mobile app launch <span id="violet" class="button">QI Goals</span></li>
+                    <li><span class="cross"> &cross; </span>Interview John H. <span id="green" class="button">Recruiting</span></li>
+                    <li><span class="check"> &check; </span>Summit update to mobile storefronts <span id="orange" class="button">Mobile</span></li>
                 </ul>
-            <h3>Upcoming</h3>
+            <h3><span class="code">&#9660;</span>Upcoming</h3>
                 <ul class="schede">
-                    <li>Schedule meeting with Alex</li>
-                    <li>Homepage refresh <span>Website</span></li>
-                    <li>Onboard new Sales team members <span>Sales</span></li>
-                    <li>Review editorial calendar  <span class="editorial">Editorial</span></li>
+                    <li><span class="cross"> &cross; </span>Schedule meeting with Alex</li>
+                    <li><span class="check"> &check; </span>Homepage refresh <span id="pink" class="button">Website</span></li>
+                    <li><span class="check"> &check; </span>Onboard new Sales team members<span id="lime" class="button">Sales</span></li>
+                    <li><span class="check"> &check; </span>Review editorial calendar  <span class="button">Editorial</span></li>
                  </ul>
         </div>
     </main>
