--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <nav>
         <div id="tools">            
-                <span id="add-task">Add Task</span>
-                <span id="add-section">Add Section</span>            
+            <span class="add-task">Add Task</span>
+            <span class="add-section">Add Section</span>            
         </div>
     </nav>
 
