pulizia codice + aggiunti commenti

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<!-- LOGO PRINCIPALE -->
     <header>
         <div class="intestazione">
             <div class="logo-text">
@@ -20,14 +20,14 @@
             </div>
         </div>
     </header>
-
+<!-- ADD -->
     <nav>
-        <div id="tools">            
+        <div id="add">            
             <span class="add-task">Add Task</span>
             <span class="add-section">Add Section</span>            
         </div>
     </nav>
-
+<!-- TASK -->
     <main>
         <div id="menu">
             <h3><span class="code">&#9660;</span>New Task</h3>
@@ -48,7 +48,7 @@
                     <li><span class="check"> &check; </span>Homepage refresh <span id="pink" class="button">Website</span></li>
                     <li><span class="check"> &check; </span>Onboard new Sales team members<span id="lime" class="button">Sales</span></li>
                     <li><span class="check"> &check; </span>Review editorial calendar  <span class="button">Editorial</span></li>
-                 </ul>
+                </ul>
         </div>
     </main>
 </body>
